# Kaleidoscope-Compiler

./: .gitignore  CMakeLists.txt  Perf.ipynb  README.md
inc/: ast.h  bindings.h  block.hpp  generator.h  list.h  optimizer.h  printer.h  symbol.h  type_rules.h  types.h
src/: ast.c  ast_private.c  bindings.c  block.cpp  deleter.c  ekcc.c  ekcc.l  ekcc.y  generator.c  list.c  optimizer.c  printer.c  symbol.c  symbol_table.c  type_rules.c
testfiles/: fibs.ek  gcf.ek  sieve.ek
testfiles/s/: scratch1  scratch2  scratch3
